--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "pyrex-fwi/sapar-organizer",
+  "name": "pyrex-fwi/sapar-mfo",
   "description": "Multimedia files organizer",
   "minimum-stability": "dev",
   "license": "MIT",
@@ -11,15 +11,15 @@
   ],
   "autoload": {
     "psr-4": {
-      "Cpyree\\Organizer\\": "src",
-      "Cpyree\\Organizer\\Test\\": "Test"
+      "Sapar\\Mfo\\": "src",
+      "Sapar\\Mfo\\Test\\": "Test"
     }
   },
   "require-dev": {
     "phpunit/phpunit": "5.1.3"
   },
   "require": {
-    "pyrex-fwi/id3": "^v0.2",
+    "pyrex-fwi/sapar-id3": "^v1",
     "symfony/filesystem": "^2.8",
     "symfony/console": "^2.8",
     "symfony/finder": "^2.8"
