--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,10 @@
     "phpunit/phpunit": "5.1.3"
   },
   "require": {
-    "pyrex-fwi/sapar-id3": "^v1",
-    "symfony/filesystem": "^2.8",
-    "symfony/console": "^2.8",
-    "symfony/finder": "^2.8"
+    "pyrex-fwi/sapar-id3": "dev-master",
+    "symfony/filesystem": "^3.1",
+    "symfony/console": "^3.1",
+    "symfony/finder": "^3.1"
   },
   "bin": ["src/bin/organize"]
 }
